tests/errors/sem6.kt
fun main(){
    val res = true + 1
}